syntax = "proto3";

package types;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/types";

////////////////////////////////////////////////////////////////////////////////

// These values are stored in DB, do not shuffle them around.
enum DiskKind {
    DISK_KIND_SSD = 0;
    DISK_KIND_HDD = 1;
    DISK_KIND_SSD_NONREPLICATED = 2;
    DISK_KIND_SSD_MIRROR2 = 3;
    DISK_KIND_SSD_LOCAL = 4;
    DISK_KIND_SSD_MIRROR3 = 5;
}

// These values are stored in DB, do not shuffle them around.
enum PlacementStrategy {
    PLACEMENT_STRATEGY_SPREAD = 0;
}

////////////////////////////////////////////////////////////////////////////////

enum EncryptionMode {
    NO_ENCRYPTION = 0;
    ENCRYPTION_AES_XTS = 1;
}

////////////////////////////////////////////////////////////////////////////////

message Disk {
    string ZoneId = 1;
    string DiskId = 2;
}

message DiskPool {
    string ZoneId = 1;
    uint32 Capacity = 2;
}

////////////////////////////////////////////////////////////////////////////////

enum FilesystemStorageKind {
    FILESYSTEM_STORAGE_KIND_SSD = 0;
    FILESYSTEM_STORAGE_KIND_HDD = 1;
}
